Java 17, spring 3.x, library upgrades (#829)
* Java 17 
* Spring boot 3
* Gradle 8.7